Nuevas funcionalidades. Lista de notificaciones Nueva notificacion entregada y no entregada. Lector de codigos de barra Firma digital Busquedas por base de datos Etc...

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorBoton">#00B0CA</color>
     <color name="colorGrisSuave">#E6E6E6</color>
+    <color name="colorBotonEntregado">#19E300</color>
+    <color name="colorBotonEntregadoPressed">#238F16</color>
+    <color name="colorBotonNoEntregado">#FF3939</color>
+    <color name="colorBotonNoEntregadoPressed">#9C0000</color>
 </resources>
