--- a/app/src/main/res/layout/activity_nueva_notificacion.xml
+++ b/app/src/main/res/layout/activity_nueva_notificacion.xml
@@ -29,26 +29,6 @@
                 android:padding="16dp">
 
                 <TextView
-                    android:id="@+id/latitud"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textAllCaps="true"/>
-                <TextView
-                    android:id="@+id/longitud"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textAllCaps="true"/>
-                <TextView
-                    android:id="@+id/ciudad"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textAllCaps="true"/>
-
-
-                <TextView
                     android:text="@string/detalle_notificacion"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -79,6 +59,44 @@
                         android:text="TextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:text="@string/latitud"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                        <TextView
+                            android:id="@+id/textView_nuevaNotificacion_latitud"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            android:layout_marginLeft="10dp"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:text="@string/longitud"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                        <TextView
+                            android:id="@+id/textView_nuevaNotificacion_longitud"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            android:layout_marginLeft="10dp"/>
+
+                        </LinearLayout>
                 </LinearLayout>
 
             </LinearLayout>
