--- a/app/src/main/res/layout/cardview_notificacion.xml
+++ b/app/src/main/res/layout/cardview_notificacion.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    android:id="@+id/cardView_notificacion"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <LinearLayout
+        android:id="@+id/linearLayout_cardView_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -46,7 +50,9 @@
             android:id="@+id/textView_cardView_resutado"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textStyle="bold"
+            android:visibility="invisible"/>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
