- Formato de las pantallas, Nueva pantalla de detalle - Nueva pantalla de detalle, guardado de la firma. Busqueda de informacion sobre las librerias para el sellado de tiempo - ReAnalisis de la estructura de resultados para añadir si es entregado en oficina o cambiando el codigo de resultado si no es final. Cambio de pantallas y de codigo fuente para adaptarlo. Cambio del formato de importacion de ficheros (Primera entrega y segunda entrega). Exportacion de fichero csv a servidor FTP. Cabio de todo el funcionamiento de resultados.

--- a/app/src/main/res/layout/activity_notificacion_entregada.xml
+++ b/app/src/main/res/layout/activity_notificacion_entregada.xml
@@ -34,32 +34,42 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
+                android:background="@drawable/edit_text_shape"
+                android:maxLines="1"
+                android:padding="8dp"
+                android:textStyle="bold"
                 android:hint="@string/numero_documento"/>
 
             <TextView
                 android:text="@string/nombre_y_apellidos"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"/>
 
             <EditText
                 android:id="@+id/editText_notificacionEntregada_nombreApellidos"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
+                android:background="@drawable/edit_text_shape"
+                android:maxLines="1"
+                android:padding="8dp"
+                android:textStyle="bold"
                 android:hint="@string/nombre_y_apellidos" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/firma_receptor"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"/>
 
             <es.correointeligente.cipostal.cimobile.Util.Lienzo
                 android:id="@+id/lienzo_firma"
                 android:layout_width="match_parent"
                 android:layout_height="275dp"
-                android:background="#FFFFFFFF" />
+                android:background="@drawable/edit_text_shape" />
 
             <android.support.v4.widget.Space
                 android:layout_width="match_parent"
@@ -75,7 +85,7 @@
                 android:weightSum="1">
 
                 <Button
-                    android:id="@+id/button_nueva_notificacion_noEntregado"
+                    android:id="@+id/button_notif_entregada_guardar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
