--- a/app/src/main/res/layout/cardview_notificacion.xml
+++ b/app/src/main/res/layout/cardview_notificacion.xml
@@ -3,7 +3,8 @@
     android:id="@+id/cardView_notificacion"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp">
 
     <LinearLayout
         android:id="@+id/linearLayout_cardView_layout"
@@ -46,13 +47,32 @@
             android:layout_height="wrap_content"
             android:text="TextView" />
 
-        <TextView
-            android:id="@+id/textView_cardView_resutado"
+        <TableLayout
+            android:id="@+id/tableLayout_cardView_resultados"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textStyle="bold"
-            android:visibility="invisible"/>
+            android:layout_marginTop="5dp"
+            android:stretchColumns="1">
+
+            <TableRow >
+                <TextView
+                    android:id="@+id/textView_cardView_resutado_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/resultado1"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/textView_cardView_resutado_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/resultado1"
+                    android:layout_gravity="right"
+                    android:textStyle="bold"/>
+            </TableRow>
+        </TableLayout>
+
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
