--- a/app/src/main/res/layout/activity_start_session.xml
+++ b/app/src/main/res/layout/activity_start_session.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_start_session"
@@ -10,12 +10,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:background="@drawable/background_gradient"
         android:orientation="vertical"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:padding="16dp">
 
         <ImageView
             android:id="@+id/imageView3"
@@ -23,15 +21,30 @@
             android:layout_height="171dp"
             app:srcCompat="@mipmap/ic_launcher" />
 
-        <android.support.v7.widget.AppCompatSpinner
-            android:id="@+id/spinner_notificador"
-            style="@style/Widget.AppCompat.Spinner.Underlined"
+        <EditText
+            android:id="@+id/edt_startSession_usuario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="50dp"
-            android:spinnerMode="dropdown"
-            android:textColor="#000000" />
+            android:inputType="textPersonName"
+            android:background="@drawable/edit_text_shape"
+            android:maxLines="1"
+            android:padding="8dp"
+            android:textStyle="bold"
+            android:layout_marginLeft="5dp"
+            android:hint="@string/usuario"/>
+
+        <EditText
+            android:id="@+id/edt_startSession_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:background="@drawable/edit_text_shape"
+            android:maxLines="1"
+            android:padding="8dp"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="5dp"
+            android:hint="@string/password"/>
 
         <Button
             android:id="@+id/button_iniciar_sesion"
@@ -39,9 +52,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|center_vertical"
             android:layout_marginTop="50dp"
+            android:background="@drawable/button_selector"
+            android:textAllCaps="false"
+            android:textColor="#FFFFFF"
             android:text="@string/iniciar_sesion" />
 
 
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
