--- a/app/src/main/res/layout/activity_detalle_notificacion.xml
+++ b/app/src/main/res/layout/activity_detalle_notificacion.xml
@@ -57,6 +57,18 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:text="@string/referencia_scb"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/textView_detalleNotificacion_refSCB"
+                        android:text="TextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:text="@string/nombre_y_apellidos"
                         android:textStyle="bold"
                         android:layout_marginTop="5dp"/>
