--- a/app/src/main/res/layout/item_fichero.xml
+++ b/app/src/main/res/layout/item_fichero.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
+        <android.support.v7.widget.AppCompatImageView
             android:id="@+id/imageView_icon_fichero"
             android:layout_width="50dp"
             android:layout_height="50dp"
