-Cambios preferencias (añadida preferencia carpeta base) - Solucion de fallos con las preferncias en castClass

--- a/app/src/main/res/xml/preferencias.xml
+++ b/app/src/main/res/xml/preferencias.xml
@@ -29,6 +29,12 @@
             android:summary="Dirección IP del servidor FTP" />
 
         <EditTextPreference
+            android:key="ftpPuerto"
+            android:title="Puerto"
+            android:numeric="integer"
+            android:summary="Puerto del servidor FTP" />
+
+        <EditTextPreference
             android:key="ftpUser"
             android:title="Usuario"
             android:summary="Usuario servidor FTP" />
@@ -46,14 +52,14 @@
             android:summary="Tiempo de espera en ms" />
 
         <EditTextPreference
+            android:key="ftpCarpetaBase"
+            android:title="Carpeta Base FTP"
+            android:summary="Carpeta Base de acceso a los ficheros" />
+
+        <EditTextPreference
             android:key="ftpCarpetaSicers"
             android:title="Carpeta ficheros"
             android:summary="Carpeta ficheros SICER" />
-        <EditTextPreference
-            android:key="ftpPuerto"
-            android:title="Puerto"
-            android:numeric="integer"
-            android:summary="Puerto del servidor FTP" />
 
     </PreferenceCategory>
 
