--- a/app/src/main/res/layout/activity_start_session.xml
+++ b/app/src/main/res/layout/activity_start_session.xml
@@ -57,14 +57,17 @@
             android:textColor="#FFFFFF"
             android:text="@string/iniciar_sesion" />
 
+        <android.support.v4.widget.Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
         <TextView
-            android:id="@+id/textView_version_value"
+            android:id="@+id/edt_startSession_version_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="135dp"
-            android:text="version 3.0"
+            android:layout_marginLeft="190dp"
             android:textStyle="italic" />
-
 
     </LinearLayout>
 </LinearLayout>
